# Assignment

./: CMakeLists.txt  README.md  controllers.py  lidar_wheelrobot.urdf  loggers.py  package.xml  run_benchmark.py  simulator.py  systems.py  test_kinematic_sim.py  utilities.py  visuals.py
launch/: kinematic.launch  lqr.launch  mpc.launch  three_wheel_sim.launch  three_wheel_track.launch
models/goal_model/: model.config  model.sdf
scripts/: controllers.py  kinematic_controller_node.py  lqr_controller_node.py  mpc_controller_node.py
urdf/: three_wheel_robot.urdf.xacro
